# mo-mem

./: README.md
motoko/: dfx.json  main.mo
rust/: Cargo.toml
rust/src/: main.rs  movm.rs
